WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135267
WKNavigation's properties are either always nil or don't behave as documented
https://bugs.webkit.org/show_bug.cgi?id=135267
Summary
WKNavigation's properties are either always nil or don't behave as documented
Anders Carlsson
Reported
2014-07-24 16:41:47 PDT
WKNavigation's properties are either always nil or don't behave as documented
Attachments
Patch
(11.49 KB, patch)
2014-07-24 16:42 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(14.61 KB, patch)
2014-07-25 11:42 PDT
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-07-24 16:42:33 PDT
Created
attachment 235472
[details]
Patch
WebKit Commit Bot
Comment 2
2014-07-24 16:44:42 PDT
Attachment 235472
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKNavigationInternal.h:32: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2014-07-25 10:05:44 PDT
Comment on
attachment 235472
[details]
Patch API tests don't even build :|
Anders Carlsson
Comment 4
2014-07-25 11:42:26 PDT
Created
attachment 235532
[details]
Patch
WebKit Commit Bot
Comment 5
2014-07-25 11:44:16 PDT
Attachment 235532
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKNavigationInternal.h:32: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 6
2014-07-25 15:52:28 PDT
Committed
r171626
: <
http://trac.webkit.org/changeset/171626
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug